examples/test/testpolicy13696.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13696
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key34: value36
      key3: value31
      key6: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value41
          key2: value39
          key4: value6
      podSelector:
        matchLabels:
          key35: value21
          key6: value49
